<resources>
    <string name="app_name">SotenShop</string>
    <string name="title_home">Home</string>
    <string name="title_category">Category</string>
    <string name="title_notifications">Like</string>
    <string name="title_basket">Basket</string>
    <string name="title_like">Like</string>
    <string name="sotenshop">SotenShop</string>
    <string name="search_hint">Search for tshirts, jeans, shorts, jackets</string>
    <string name="please_login">로그인 하세요</string>
    <string name="category">Categories</string>
    <string name="see_all">See all</string>
    <string name="recommended">Recommended</string>
    <string name="login_comment">로그인 후 상품을 구매하세요</string>
    <string name="password">비밀번호</string>
    <string name="e_mail">E-mail</string>
    <string name="sotenshop_login">SotenShop Login</string>
    <string name="login">SignIn</string>
    <string name="signup">SignUp</string>
    <string name="name">이름</string>
    <string name="sign_up"> Sign Up</string>
    <string name="don_t_have_an_account">Don’t have an account? </string>
    <string name="logo_text">"SotenShop SignUp"</string>
    <string name="logout">로그아웃</string>
    <string name="add_product">상품 등록</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="liked">Liked</string>
    <string name="basket">Basket</string>
    <string name="checkout">Checkout</string>
    <string name="register_card">카드 등록</string>
    <string name="card_expiry">카드 유효기간</string>
    <string name="pwd_2digit">비밀번호 2자리</string>
    <string name="birthday">생년 월일</string>
    <string name="card_number_input">카드 번호 16 자리</string>
    <string name="card_name_input">카드 이름을 입력해주세요</string>

    <string name="form">%s 값으로 검색한 값이 없습니다</string>
    <string name="t_shirt">T-Shirt</string>
    <string name="hoodie">Hoodie</string>
    <string name="jeans">Jeans</string>
    <string name="shorts">Shorts</string>
    <string name="sweater">Sweater</string>
    <string name="tracks">Tracks</string>

    <string name="formCost">%s 원</string>
    <string name="formCount">(%s items)</string>
</resources>