<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sotenshop_login"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/emailLayout"
        app:layout_constraintEnd_toEndOf="@id/passwordLayout"
        app:layout_constraintStart_toStartOf="@id/passwordLayout"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="140dp"
        android:hint="@string/e_mail"
        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:startIconDrawable="@drawable/ic_baseline_person_pin_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_text_input_layout" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_text_input_layout" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        android:hint="@string/name"
        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText"
        android:visibility="gone"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_text_input_layout" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signInAndSignUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/background_text_input_layout"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/nameLayout" />

    <LinearLayout
        android:id="@+id/signUpLayout"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/passwordLayout"
        app:layout_constraintEnd_toEndOf="@id/passwordLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>